<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#A3C7D6"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/InputUsername"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/background_text_profile"
        android:hint="@string/loginUsername"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/background_text_profile"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputUsername" />

    <Button
        android:id="@+id/LoginBtn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:text="@string/loginButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

    <Button
        android:id="@+id/SignUpBtn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/SignUpButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="284dp"
        android:layout_height="313dp"
        app:layout_constraintBottom_toTopOf="@+id/InputUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>