<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A3C7D6"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/InputUsernameEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/username_input"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputLastNameEdit" />

        <Button
            android:id="@+id/BtnEdit"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Edit"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmergency" />

        <EditText
            android:id="@+id/InputContactNoEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/contactNo_input"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputEmailEdit" />

        <EditText
            android:id="@+id/InputEmailEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputUsernameEdit" />

        <EditText
            android:id="@+id/InputReEnterPassEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/reEnterPassword_input"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputPassEdit" />

        <EditText
            android:id="@+id/InputPassEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputContactNoEdit" />

        <EditText
            android:id="@+id/InputBrandEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/brand_input"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputReEnterPassEdit" />

        <!--    <com.google.android.material.textview.MaterialTextView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/signUp_title"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="30dp"
            android:textSize="50sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginEnd="39dp"
            android:text="Edit Profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/InputFirstNameEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/firstname_input"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/InputLastNameEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="@string/lastname_input"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputFirstNameEdit" />

        <EditText
            android:id="@+id/inputEmergency"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="39dp"
            android:background="@drawable/background_text_profile"
            android:ems="10"
            android:hint="Emergency Contact No."
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputBrandEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
