<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3C7D6"
    tools:context=".HomeFragment"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/warningTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="Warning: Override function unresolved. "
        android:textSize="16sp"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        >


        <ImageButton
            android:id="@+id/parkHelpBtn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="@drawable/button_round_shape"
            android:tooltipText="asas"
            android:src="@drawable/help_icon"
            app:layout_constraintBottom_toBottomOf="@+id/ParkingModeText"
            app:layout_constraintStart_toEndOf="@+id/ParkingModeText"
            app:layout_constraintTop_toTopOf="@+id/ParkingModeText" />

        <ImageButton
            android:id="@+id/engineHelpBtn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_round_shape"
            android:scaleType="fitCenter"
            android:src="@drawable/help_icon"
            app:layout_constraintBottom_toBottomOf="@+id/BatteryLifeText"
            app:layout_constraintStart_toEndOf="@+id/BatteryLifeText"
            app:layout_constraintTop_toTopOf="@+id/BatteryLifeText" />

        <ImageButton
            android:id="@+id/batteryHelpBtn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_round_shape"
            android:scaleType="fitCenter"
            android:src="@drawable/help_icon"
            app:layout_constraintBottom_toBottomOf="@+id/EngineImmobilizerText"
            app:layout_constraintStart_toEndOf="@+id/EngineImmobilizerText"
            app:layout_constraintTop_toTopOf="@+id/EngineImmobilizerText" />

        <TextView
            android:id="@+id/ParkingModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/parking_mode"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <Button
            android:id="@+id/overrideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Override Off"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/EngineImmobilizerText"
            app:layout_constraintTop_toBottomOf="@+id/EngineImmobilizerText" />
        

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/EngineImmobilizerSwitch"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BatteryLifeText"
            app:thumbTint="@color/switch_thumb_selector"
            />

        <TextView
            android:id="@+id/EngineImmobilizerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/battery_life"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EngineImmobilizerSwitch" />

        <!--        <androidx.appcompat.widget.SwitchCompat-->
        <!--            android:id="@+id/ParkSwitch"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:textOff="Off"-->
        <!--            android:textOn="On"-->
        <!--            android:thumb="@drawable/thumb_switch"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/ParkingModeText"-->
        <!--            app:showText="true"-->
        <!--            app:track="@drawable/track_switch" />-->

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ParkingModeSwitch"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ParkingModeText"
            app:thumbTint="@color/switch_thumb_selector"
            />


        <TextView
            android:id="@+id/BatteryLifeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/engine_immobilizer"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ParkingModeSwitch" />

        <TextView
            android:id="@+id/onLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="On"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ParkingModeSwitch"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/ParkingModeSwitch" />

        <TextView
            android:id="@+id/offLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginEnd="10dp"
            android:text="Off"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ParkingModeSwitch"
            app:layout_constraintEnd_toStartOf="@+id/ParkingModeSwitch" />

        <TextView
            android:id="@+id/onLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="On"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/EngineImmobilizerSwitch"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@+id/EngineImmobilizerSwitch" />

        <TextView
            android:id="@+id/offLbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginEnd="10dp"
            android:text="Off"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/EngineImmobilizerSwitch"
            app:layout_constraintEnd_toStartOf="@+id/EngineImmobilizerSwitch" />

        <TextView
            android:id="@+id/batteryLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EngineImmobilizerText" />


        <!--        <Button-->
<!--            android:id="@+id/button3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toEndOf="@+id/ParkingModeText"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:background="@drawable/button_round_shape"-->
<!--            />-->

<!--        <Button-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@drawable/button_round_shape"-->
<!--            android:gravity="center_vertical|center_horizontal"-->
<!--            android:textColor="#fff"-->
<!--            app:layout_constraintStart_toEndOf="@+id/ParkingModeText"-->
<!--            app:layout_constraintTop_toTopOf="parent" -->
<!--            />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>